--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <header>
             <div>
-                <img src="https://github.com/Lordlipe.png" alt="Foto Lord - Felipe">
+                <img src="https://github.com/FelipeMarqus.png" alt="Foto Lord - Felipe">
             </div>
         </header>
         <main>
