--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
                     <ul class="game_list">
                         <li>
-                            <a href="https://www.twitch.tv/directory/game/League%20of%20Legends" target="_blank"> 
-                                <img src="https://static-cdn.jtvnw.net/ttv-boxart/21779-144x192.jpg" alt="imagem do jogo league of legends">
+                            <a href="https://www.twitch.tv/directory/category/path-of-exile" target="_blank"> 
+                                <img src="https://static-cdn.jtvnw.net/ttv-boxart/29307_IGDB-144x192.jpg" alt="imagem do jogo path of exile">
                             </a>
                         </li>
                         <li>
