--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <section>
                 <div>
-                     <h2>Minhas Séries</h2>
+                     <h2 class="minhas">Minhas Séries</h2>
                      <p>Séries que assisto no momento!</p>
  
                      <ul class="series_list">
